[metadata]
name = async_ethermine-DeBelsch
version = attr: async_ethermine.version
author = DeBelsch
author_email = chris_barbier@hotmail.com
description = An asynchronous Python client for the ethermine.org API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeBelsch/async_ethermine
project_urls =
    Bug Tracker = https://github.com/DeBelsch/async_ethermine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6